# rfi-sdk

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: lib.rs  resources.rs  response.rs
api/src/api/: account.rs  apply.rs  chat.rs  contact.rs  device.rs  elf.rs  favorite.rs  message.rs  mod.rs  nav.rs  settings.rs
api/src/error/: mod.rs  system.rs
api/src/logic/: account.rs  apply.rs  chat.rs  community.rs  elf.rs  favorite.rs  message.rs  mod.rs  settings.rs
api/src/operator/: mod.rs
api/src/service/: account.rs  apply.rs  chat.rs  contact.rs  device.rs  favorite.rs  message.rs  mod.rs  nav.rs
docs/: api.md  cn.md  how to use sqlite orm.md  im-sdk-api-cn.md  im-sdk-api.md  sdk-api-en.md
docs/chinese/: cn.md  sdk-api-cn.md
http/: Cargo.toml
http/src/: fun.rs  lib.rs
http/src/util/: api_reqwest.rs  mod.rs
im-sdk-api/: Cargo.toml
im-sdk-api/schema/private/migrations/: 20240128121927_account.sql  20240128123110_device.sql  20240204124514_community_admin.sql  20240204124518_community_member.sql
im-sdk-api/schema/public/migrations/: 20230922094323_latest_login.sql
im-sdk-api/src/: lib.rs
im-sdk-api/src/api/: account.rs  chat.rs  contact.rs  device.rs  elf.rs  favorite.rs  message.rs  mod.rs  nav.rs  settings.rs
im-sdk-api/src/api/account/: mod.rs  param.rs
im-sdk-api/src/api/apply/: mod.rs  param.rs  reply.rs
im-sdk-api/src/api/community/: _community.rs  admin.rs  member.rs  mod.rs  post.rs  post_reply.rs
im-sdk-api/src/api/community/_community/: mod.rs  param.rs
im-sdk-api/src/api/community/admin/: mod.rs  param.rs
im-sdk-api/src/api/community/member/: mod.rs  param.rs
im-sdk-api/src/api/community/post/: mod.rs  param.rs
im-sdk-api/src/api/community/post_reply/: mod.rs  param.rs
im-sdk-api/src/api/contact/: mod.rs  param.rs
im-sdk-api/src/api/device/: mod.rs  param.rs
im-sdk-api/src/api/elf/: mod.rs  param.rs
im-sdk-api/src/api/favorite/: mod.rs  param.rs
im-sdk-api/src/api/message/: mod.rs  param.rs
im-sdk-api/src/api/nav/: mod.rs  param.rs
im-sdk-api/src/api/settings/: mod.rs  param.rs
im-sdk-api/src/error/: bad_request.rs
im-sdk-api/src/error/common/: channel.rs  database.rs  parse.rs
im-sdk-api/src/handler/: account.rs  chat.rs  contact.rs  device.rs  elf.rs  message.rs  nav.rs
im-sdk-api/src/handler/community/: _community.rs  admin.rs  member.rs  post.rs  post_reply.rs
im-sdk-api/src/logic/: account.rs  apply.rs  chat.rs  contact.rs  elf.rs  favorite.rs  message.rs  mod.rs  nav.rs  settings.rs
im-sdk-api/src/logic/community/: _community.rs  admin.rs  member.rs  post.rs  post_reply.rs
im-sdk-api/src/operator/net/: channel.rs  codec.rs  mod.rs
im-sdk-api/src/operator/sqlite/: init.rs  mod.rs
im-sdk-api/src/service/: chat.rs  device.rs  elf.rs
im-sdk-api/src/service/account/: mod.rs
im-sdk-api/src/service/apply/: mod.rs  reply.rs
im-sdk-api/src/service/community/: _community.rs  admin.rs  member.rs  mod.rs  post_reply.rs
im-sdk-api/src/service/message/: status.rs
im-sdk-api/src/service/settings/: language.rs  mod.rs
payload/: Cargo.toml
payload/src/: lib.rs
payload/src/error/: mod.rs  snowflake.rs
payload/src/resources/: broadcast.rs  chat.rs  contact.rs  device.rs  elf.rs  favorite.rs  mod.rs  nav.rs  server.rs  session.rs  settings.rs
payload/src/resources/account/: avatar.rs  community.rs  elf.rs  mod.rs
payload/src/resources/apply/: mod.rs  reply.rs
payload/src/resources/chat/: mod.rs  status.rs
payload/src/resources/community/: admin.rs  info.rs  member.rs  mod.rs  post.rs  post_reply.rs
payload/src/resources/community/admin/: mod.rs  typ.rs
payload/src/resources/community/member/: mod.rs  typ.rs
payload/src/resources/community/post/: info.rs  mod.rs
payload/src/resources/community/post_reply/: info.rs  mod.rs
payload/src/resources/contact/: mod.rs  remark.rs
payload/src/resources/device/: mod.rs  token.rs
payload/src/resources/elf/: mod.rs
payload/src/resources/message/: block.rs  data.rs  mod.rs  status.rs
payload/src/resources/settings/: language.rs  mod.rs
payload/src/utils/: mod.rs  snowflake.rs  time.rs
schema/private/migrations/: 20240130011559_message.sql
sdk-api/: Cargo.toml
sdk-api/src/: lib.rs  resources.rs  response.rs
sdk-api/src/api/: chat.rs  mod.rs
sdk-api/src/error/: bad_request.rs  mod.rs  system.rs
sdk-api/src/handler/: account.rs  chat.rs  contact.rs  device.rs  elf.rs  favorite.rs  message.rs  nav.rs  settings.rs
sdk-api/src/logic/: account.rs  apply.rs  chat.rs  contact.rs  elf.rs  favorite.rs  message.rs  mod.rs  nav.rs  settings.rs
sdk-api/src/operator/: mod.rs
sdk-api/src/service/: chat.rs  contact.rs  device.rs  elf.rs  favorite.rs  mod.rs  nav.rs
src/: db.rs  error.rs  lib.rs  resources.rs  response.rs  sqlite_operator.rs
src/command/: account.rs  apply.rs  chat.rs  contact.rs  device.rs  elf.rs  favorite.rs  message.rs  nav.rs  settings.rs
src/command/chat/: chat.rs
src/command/community/: admin.rs  community.rs  info.rs  member.rs  mod.rs  post.rs  post_reply.rs
src/error/: bad_request.rs  mod.rs
src/error/api/: community.rs  init_database.rs  mod.rs
src/error/common/: database.rs
src/service/: account.rs  device.rs  mod.rs
wallet/: Cargo.toml  slip-0044.md
wallet/src/: error.rs  fun.rs  lib.rs
wallet/src/util/: contact.rs  device.rs  hdrf.rs  mod.rs  pin.rs  signature.rs  x25519_chacha20poly1305.rs
(+111 files in other folders)
