#
# Copyright 2024 Ram Flux, LLC.
#
[package]
name = "http"
version = "0.1.0"
edition = "2021"

[dependencies]

wallet = { path = "../wallet" }

reqwest = { version = "0.12", features = ["blocking"] }
anyhow = "1"
uuid = { version = "1.2.1", features = ["v4"] }
# time
chrono = "0.4"
chrono-tz = "0.8.6"

serde = { version = "1", features = ["derive"] }
serde_json = "1.0.89"
tracing = { version = "0.1.36", features = ["attributes"] }

bytes = "1"

tokio = { version = "1", features = ["full"] }
hex = "0.4"

[dev-dependencies]
wiremock = "0.5"

