[package]
name = "im-sdk-api"
version = "0.1.2"
edition = "2021"
default-features = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
mock = ["im-net/mock"]
# mock = []

[dev-dependencies]
im-net = { git = "ssh://git@github.com:22/ram-flux/im-net" }

[dependencies]
im-net = { git = "ssh://git@github.com:22/ram-flux/im-net", default-features = false }
resource = { git = "https://github.com/tediou5/resources.git", branch = "sqlite" }

payload = { path = "../payload" }
wallet = { path = "../wallet" }

thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

once_cell = { version = "1", default-features = false }

tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

sqlx = { version = "0.7", features = [
    "sqlite",
    "postgres",
    "runtime-tokio-rustls",
] }

tracing = "0.1"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }

hex = "0.4.3"

aes-gcm-siv = "0.11"

bson = "2.9.0"
