#
# Copyright 2024 Ram Flux, LLC.
#
[package]
name = "wallet"
version = "0.1.0"
edition = "2021"
authors = ["Andy.z"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny-bip39 = "1.0.0"
tiny-hderive = "0.3.0"
secp256k1 = "0.27.0"
sha3 = "0.10.8"
bs58 = "0.5.0"
anyhow = "1.0"


#pass number

pbkdf2 = { version = "0.12.2", features = ["hmac"] }
aes-gcm = { version = "0.10.3", features = ["aes"] }
hkdf = "0.12.4"
k256 = { version = "0.13.3", features = ["ecdh"] }
elliptic-curve = "0.13.8"
rand = "0.8"
sha2 = "0.10"
hmac = "0.11"

base64 = "0.21.7"
hex = "0.4.3"
