#
# Copyright 2024 Ram Flux, LLC.
#
[package]
name = "wallet"
version = "0.1.0"
edition = "2021"
authors = ["Andy.z"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"

tiny-bip39 = "1"
tiny-hderive = "0.3"
secp256k1 = {version = "0.28",features = ["global-context","hashes"]}

#pass number

pbkdf2 = { version = "0.12.2", features = ["hmac"] }
aes-gcm = { version = "0.10.3", features = ["aes"] }
hkdf = "0.12.4"
k256 = { version = "0.13.3", features = ["ecdh"] }
sha2 = "0.10"
hex = "0.4.3"

bs58 = "0.5.0"

rand_core = { version = "0.6", features = ["getrandom"] }
rand_chacha = "0.3.1"
x25519-dalek = { version = "2.0.0", features = [
    "reusable_secrets",
    "static_secrets",
] }


[dev-dependencies]
rand = "0.8"
sha3 = "0.10"
hmac = "0.12"
base64 = "0.21.7"
elliptic-curve = "0.13.8"
